--- a/debuggedlabs-site/package.json
+++ b/debuggedlabs-site/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "ng-scroll-progress": "^1.0.0",
+    "ngx-bootstrap": "^5.0.0",
+    "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
