--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -32,4 +32,4 @@ jobs:
         app-name: 'debuggedlabs-site'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_5e1bba91387b4b83b691d409d211f8d9 }}
-        package: .
+        package: 'dist/debuggedlabs-site'
