Updating dependencies, deployment script

--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -1,7 +1,11 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - debuggedlabs
+name: DebuggedLabs Deployment Cycle
+
+env:
+  AZURE_WEBAPP_NAME: 'debuggedlabs-site'
+  AZURE_WEBAPP_PACKAGE_PATH: '.'          
 
 on:
   push:
@@ -29,5 +33,6 @@ jobs:
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v1
       with:
-        app-name: 'debuggedlabs-site'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5e1bba91387b4b83b691d409d211f8d9 }}
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_f6ef5893d3ee41cfa79494eaed30e481 }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
