--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -1,11 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: DebuggedLabs Deployment Cycle
-
-env:
-  AZURE_WEBAPP_NAME: 'debuggedlabs-site'
-  AZURE_WEBAPP_PACKAGE_PATH: '.'          
+name: Build and deploy Node.js app to Azure Web App - debuggedlabs
 
 on:
   push:
@@ -22,17 +18,18 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '10.14'
+        node-version: '10.x'
 
     - name: npm install, build, and test
       run: |
-        cd debuggedlabs-site
         npm install
         npm run build --if-present
+        npm run test --if-present
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v1
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_f6ef5893d3ee41cfa79494eaed30e481 }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        app-name: 'debuggedlabs'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_75053c3ebac04dedb22c8deaacb53d4e }}
+        package: .
