Fixing pipeline script

--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -27,7 +27,7 @@ jobs:
 
     # publish the pipeline artifact
     - name: Publish pipeline artifact
-      uses: PublishPipelineArtifact@1
+      uses: azure/PublishPipelineArtifact@1
       with: 
         targetPath: $(System.DefaultWorkingDirectory)/dist
         artifactName: drop
