Using dist as package

--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -25,18 +25,18 @@ jobs:
         npm install
         npm run deploy
 
-    # publish the artifact
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: dist
-        path: dist
+    # # publish the artifact
+    # - name: Upload artifact
+    #   uses: actions/upload-artifact@v1
+    #   with:
+    #     name: dist
+    #     path: dist
 
-    # download generated artifact
-    - name: Download artiifact
-      uses: actions/download-artifact@v1
-      with:
-        name: dist
+    # # download generated artifact
+    # - name: Download artiifact
+    #   uses: actions/download-artifact@v1
+    #   with:
+    #     name: dist
 
       # deploy to Azure Web App
     - name: 'Deploy to Azure Web App'
@@ -45,4 +45,4 @@ jobs:
         app-name: 'debuggedlabs-site'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_75053c3ebac04dedb22c8deaacb53d4e }}
-        package: dist
+        package: dist/debuggedlabs-site
