--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -23,7 +23,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --prod
+        npm run deploy
 
       # deploy to Azure Web App
     - name: 'Deploy to Azure Web App'
