--- a/.github/workflows/master_debuggedlabs.yml
+++ b/.github/workflows/master_debuggedlabs.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@master
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '10.x'
+        node-version: '12.13.0'
 
     - name: npm install, build, and test
       run: |
@@ -31,5 +31,5 @@ jobs:
       with:
         app-name: 'debuggedlabs'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_bda3864499a5461ba88ba03f9133cf53 }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_bc13d9fc31514aacac825cfb08e9c34b }}
         package: .
