--- a/package.json
+++ b/package.json
@@ -22,32 +22,33 @@
     "@angular/router": "~8.0.3",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/router": "^4.2.0",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.5.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "ng-scroll-progress": "^1.0.0",
-    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap": "^5.6.2",
+    "ngx-markdown": "^11.1.2",
     "popper": "^1.0.1",
     "rxjs": "~6.6.6",
-    "tslib": "^1.11.1",
+    "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803",
-    "@angular/cli": "~8.0.6",
-    "@angular/compiler-cli": "~8.0.3",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "^11.2.4",
+    "@angular/compiler-cli": "^11.2.5",
     "@angular/language-service": "~8.0.3",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.6.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.2",
+    "karma": "^6.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.4",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
