--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/router": "^4.2.0",
     "bootstrap": "^4.6.0",
+    "commonmark": "^0.29.3",
     "jquery": "^3.6.0",
     "ng-scroll-progress": "^1.0.0",
     "ngx-bootstrap": "^5.6.2",
